# AlgebraTrust

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/math/: MathInput.tsx
apps/web/components/shell/: LeftPanel.tsx  RightPanel.tsx  WorkspaceShell.tsx
apps/web/components/trust/: TrustChecks.tsx
apps/web/lib/: api.ts  env.ts
apps/web/types/: api.ts
docs/architecture/: decisions.md
docs/contracts/: bootstrap_api.md
docs/scope/: v1.md
services/api/: pyproject.toml
services/api/algebratrust_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/app/: __init__.py  main.py
services/api/app/core/: config.py  cors.py
services/api/app/routes/: __init__.py  demo.py  health.py
services/api/app/schemas/: quadratic.py
services/api/app/services/: __init__.py  demo_quadratic.py
services/api/app/trust/: __init__.py  checks.py
services/api/tests/: test_demo_quadratic.py  test_health.py
